<resources>
    <string name="app_name" translatable="false">BB</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="about_text">This application is designed to help you get from your current location to your destination with ease. All you need to do is to provide the application with your pick-up location and your destination and the application will provide you with the best route.</string>
    <string name="about_title">About</string>
    <string name="help_title">Help</string>
    <string name="app_title">MetroNav</string>
    <string name="login_label">Login</string>
    <string name="password_label">Password</string>
    <string name="email_label">Email</string>
    <string name="registration_label">Registration</string>
    <string name="fname_label">First Name</string>
    <string name="lname_label">Last Name</string>
    <string name="fname_hint">First Name</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="register_button">Register</string>
    <string name="lname_hint">Last Name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="login_button">Login</string>
    <string name="forgot_password_text">forgot password?</string>
    <string name="sign_up_text">Don\'t have an account? <font fgcolor='#000000'><b><u>Sign Up</u></b></font></string>
    <string name="purpose_label">Purpose</string>
    <string name="governorate_label">Governorate</string>
    <string name="case_label">Case</string>
    <string name="age_label">Age</string>
    <string name="purpose_content">Purpose of using the app</string>
    <string name="charities_label">Charities</string>
    <string name="special_donations_label">Special Donations</string>
    <string name="national_id_label">National ID</string>
    <string name="counrty_label">Country</string>
    <string name="mobile_label">Mobile Number</string>
    <string name="profile_label">Profile</string>
    <string name="case_num_label">Case No.</string>
    <string name="nat_id_label">National ID</string>
    <string name="status_label">Status</string>
    <string name="donate_by_case_num_button">Donate By Case No.</string>
    <string name="charity_description_label">Charity Description</string>
    <string name="cases_label">Charity Cases</string>
    <string name="donate_in_general_button">Donate to charity in general</string>
    <string name="regular_donation_button">Regular Donation</string>
    <string name="case_description_label">Case Description</string>
    <string name="total_amount_label">Total Amount:</string>
    <string name="amount_needed_label">Amount Needed:</string>
    <string name="amount_paid_label">Amount Paid:</string>
    <string name="case_criticality_level_label">Case Criticality Level</string>
    <string name="criticality_level_label">Criticality Level:</string>
    <string name="Criticality_levels_text">H: High, M: Medium, L:, Low</string>
    <string name="donate_button">Donate</string>
    <string name="insert_case_number_label">Insert Case Number:</string>
    <string name="share_case_label">Share Case</string>
    <string name="view_case_button">View Case</string>
    <string name="home_label">Home</string>
    <string name="charity_details_label">Charity Details</string>
    <string name="case_details_label">Case Details</string>
    <string name="my_donations_label">My Donations</string>
    <string name="logout_label">Logout</string>
    <string name="language_label">Language</string>
    <string name="arabic_label">عربى</string>
    <string name="english_label">English</string>
    <string name="content_description_end_icon">Password Icon</string>
    <string name="required">Required</string>
    <string name="case_number">Case Number</string>
    <string name="max_amount_text">Max</string>
    <string name="min_amount">Min</string>
    <string name="egp_suffix">EGP</string>
    <string name="donation_amount_text">Donation Amount</string>
    <string name="success_text">Success</string>
    <string name="close_dialog_button">Close</string>
</resources>